syntax = "proto3";

package substreams;

message BatchCreatedEvent {
  uint64 id = 1;
  string manufacturer = 2;
  int64 manufacture_date = 3;
  int64 expiry_date = 4;
  string status = 5;
}

message BatchUpdatedEvent {
  uint64 id = 1;
  string status = 2;
}

message TemperatureExceededEvent {
  uint64 id = 1;
  uint64 batch_id = 2;
  int32 temperature = 3;
  int64 timestamp = 4;
}

message BatchEvents {
  repeated BatchCreatedEvent batch_created = 1;
  repeated BatchUpdatedEvent batch_updated = 2;
  repeated TemperatureExceededEvent temperature_exceeded = 3;
}
